<resources>
    <string name="app_name">BarStoolPrinting</string>
    <string name="password">z</string>
    <string name="url">https://etsy.me/2J7vSio</string>
    <string name="myEmail">bstoolprinting@gmail.com</string>
    <string name="title_banner">Banner</string>
    <string name="title_products">Products</string>
    <string name="title_admin_products">Admin Products</string>
    <string name="title_about">About Us</string>
    <string name="title_admin_about">Admin About</string>
    <string name="title_join">Join Our Mailing List</string>
    <string name="title_admin_join">Admin Mailing</string>
    <string name="title_retailers">Local Retailers</string>
    <string name="title_admin_retailers">Admin Retailers</string>
    <string name="title_home">Home</string>
    <string name="title_back">Back</string>
    <string name="title_admin">Admin</string>
    <string name="title_shows">Shows</string>
    <string name="title_fundraising">Fundraising</string>
    <string name="title_bottle">Bottle Openers</string>
    <string name="title_coasters">Coasters</string>
    <string name="title_mugs">Mugs</string>
    <string name="title_other">Other</string>
    <string name="title_photo">Photo Slate</string>
    <string name="title_vendors">Retailers</string>
    <string name="choose_about_image">Choose About Image</string>
    <string name="choose_retailers_image">Choose Retailers Image</string>
    <string name="choose_set_image">Set About Image</string>
    <string name="send_join">Send Join List</string>
    <string name="joinList">joinList</string>
    <string name="products_data">productsData</string>
    <string name="root_folder">bar_stool_printing</string>
    <string name="button_folder">button</string>
    <string name="screen_folder">screen</string>
    <string name="products_folder">products</string>
    <string name="products_button">products_button.png</string>
    <string name="about_folder">about</string>
    <string name="about_screen">about_screen.png</string>
    <string name="about_button">about_button.png</string>
    <string name="join_folder">join</string>
    <string name="join_button">join_button.png</string>
    <string name="banner_folder">banner</string>
    <string name="banner_screen">banner_screen.png</string>
    <string name="fundraising_folder">fundraising</string>
    <string name="fundraising_screen">fundraising_screen.png</string>
    <string name="fundraising_button">fundraising_button.png</string>
    <string name="retailers_folder">retailers</string>
    <string name="retailers_screen">retailers_screen.png</string>
    <string name="retailers_button">retailers_button.png</string>
    <string name="shows_folder">shows</string>
    <string name="shows_screen">shows_screen.png</string>
    <string name="shows_button">shows_button.png</string>
    <string name="categories_folder">categories</string>
    <string name="bottle_openers_folder">bottle_openers</string>
    <string name="coasters_folder">coasters</string>
    <string name="mugs_folder">mugs</string>
    <string name="other_folder">other</string>
    <string name="photo_slate_folder">photo_slate</string>
    <string name="category_pref">category</string>
    <string name="bottle">bottle</string>
    <string name="coasters">coasters</string>
    <string name="mugs">mugs</string>
    <string name="other">other</string>
    <string name="photo">photo</string>
    <string name="products">products</string>
    <string name="about">about</string>
    <string name="join">join</string>
    <string name="retailers">retailers</string>
    <string name="shows">shows</string>
    <string name="fundraising">fundraising</string>
</resources>
