<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/RootLayout">

    <include layout="@layout/banner_layout"/>

    <LinearLayout style="@style/VerticalLayout">

        <LinearLayout style="@style/ButtonsRowLayout">

            <LinearLayout style="@style/ButtonLayout">

                <ImageButton
                    android:id="@+id/products"
                    android:contentDescription="@string/products"
                    style="@style/ImageButton"/>

                <TextView
                    android:text="@string/title_products"
                    style="@style/ButtonTextView"/>
            </LinearLayout>

            <LinearLayout style="@style/ButtonLayout">

                <ImageButton
                    android:id="@+id/about"
                    android:contentDescription="@string/about"
                    style="@style/ImageButton"/>

                <TextView
                    android:text="@string/title_about"
                    style="@style/ButtonTextView"/>
            </LinearLayout>

            <LinearLayout style="@style/ButtonLayout">

                <ImageButton
                    android:id="@+id/join"
                    android:contentDescription="@string/join"
                    style="@style/ImageButton"/>

                <TextView
                    android:text="@string/title_join"
                    style="@style/ButtonTextView"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout style="@style/ButtonsRowLayout">

            <LinearLayout style="@style/ButtonLayout">

                <ImageButton
                    android:id="@+id/retailers"
                    android:contentDescription="@string/retailers"
                    style="@style/ImageButton"/>

                <TextView
                    android:text="@string/title_retailers"
                    style="@style/ButtonTextView"/>
            </LinearLayout>

            <LinearLayout style="@style/ButtonLayout">

                <ImageButton
                    android:id="@+id/shows"
                    android:contentDescription="@string/shows"
                    style="@style/ImageButton"/>

                <TextView
                    android:text="@string/title_shows"
                    style="@style/ButtonTextView"/>
            </LinearLayout>

            <LinearLayout style="@style/ButtonLayout">

                <ImageButton
                    android:id="@+id/fundraising"
                    android:contentDescription="@string/fundraising"
                    style="@style/ImageButton"/>

                <TextView
                    android:text="@string/title_fundraising"
                    style="@style/ButtonTextView"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        app:menu="@menu/navigation"
        style="@style/BottomNavigation"/>
</RelativeLayout>
