<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/RootLayout">

    <include layout="@layout/banner_layout"/>

    <LinearLayout style="@style/VerticalLayout">

        <LinearLayout style="@style/ButtonsRowLayout">

            <LinearLayout style="@style/ButtonLayout">

                <ImageButton
                    android:id="@+id/bottle"
                    android:contentDescription="@string/bottle"
                    style="@style/ImageButton"/>

                <TextView
                    android:text="@string/title_bottle"
                    style="@style/ButtonTextView"/>
            </LinearLayout>

            <LinearLayout style="@style/ButtonLayout">

                <ImageButton
                    android:id="@+id/coasters"
                    android:contentDescription="@string/coasters"
                    style="@style/ImageButton"/>

                <TextView
                    android:text="@string/title_coasters"
                    style="@style/ButtonTextView"/>
            </LinearLayout>

            <LinearLayout style="@style/ButtonLayout">

                <ImageButton
                    android:id="@+id/mugs"
                    android:contentDescription="@string/mugs"
                    style="@style/ImageButton"/>

                <TextView
                    android:text="@string/title_mugs"
                    style="@style/ButtonTextView"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout style="@style/ButtonsRowLayout">

            <LinearLayout style="@style/ButtonLayout">

                <ImageButton
                    android:id="@+id/other"
                    android:contentDescription="@string/other"
                    style="@style/ImageButton"/>

                <TextView
                    android:text="@string/title_other"
                    style="@style/ButtonTextView"/>
            </LinearLayout>

            <LinearLayout style="@style/ButtonLayout">

                <ImageButton
                    android:id="@+id/photo"
                    android:contentDescription="@string/photo"
                    style="@style/ImageButton"/>

                <TextView
                    android:text="@string/title_photo"
                    style="@style/ButtonTextView"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        app:menu="@menu/navigation"
        style="@style/BottomNavigation"/>
</RelativeLayout>