<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/banner"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/banner_height"
            android:contentDescription="@string/title_banner"
            app:srcCompat="@drawable/etsy_banner_2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="@dimen/padding_layout"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/padding_button">

                <ImageButton
                    android:id="@+id/bottle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height_size"
                    android:background="@drawable/custom_button"
                    android:textColor="@color/colorTextOnPrimary"
                    android:contentDescription="@string/bottle" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_text_max_height_size"
                    android:text="@string/title_bottle"
                    android:gravity="center"
                    android:textColor="@color/colorTextOnBackground" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/padding_button">

                <ImageButton
                    android:id="@+id/coasters"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height_size"
                    android:background="@drawable/custom_button"
                    android:textColor="@color/colorTextOnPrimary"
                    android:contentDescription="@string/coasters" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_text_max_height_size"
                    android:text="@string/title_coasters"
                    android:gravity="center"
                    android:textColor="@color/colorTextOnBackground" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/padding_button">

                <ImageButton
                    android:id="@+id/mugs"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height_size"
                    android:background="@drawable/custom_button"
                    android:textColor="@color/colorTextOnPrimary"
                    android:contentDescription="@string/mugs"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_text_max_height_size"
                    android:text="@string/title_mugs"
                    android:gravity="center"
                    android:textColor="@color/colorTextOnBackground" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="@dimen/padding_layout"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/padding_button">

                <ImageButton
                    android:id="@+id/other"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height_size"
                    android:background="@drawable/custom_button"
                    android:textColor="@color/colorTextOnPrimary"
                    android:contentDescription="@string/other"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_text_max_height_size"
                    android:text="@string/title_other"
                    android:gravity="center"
                    android:textColor="@color/colorTextOnBackground" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/padding_button">

                <ImageButton
                    android:id="@+id/photo"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height_size"
                    android:background="@drawable/custom_button"
                    android:textColor="@color/colorTextOnPrimary"
                    android:contentDescription="@string/photo"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_text_max_height_size"
                    android:text="@string/title_photo"
                    android:gravity="center"
                    android:textColor="@color/colorTextOnBackground" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/navigation"
        android:background="@color/colorPrimary" />
</LinearLayout>