<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/title_banner"
        app:srcCompat="@drawable/etsy_banner_2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="@string/title_vendors"
            android:textSize="@dimen/text_size_big"
            android:gravity="center"/>
        <ImageView
            android:id="@+id/vendors_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/title_banner"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center"
        android:orientation="horizontal"
        android:padding="@dimen/padding">

        <Button
            android:id="@+id/home"
            android:layout_width="@dimen/small_button_width_size"
            android:layout_height="@dimen/small_button_height_size"
            android:background="@drawable/custom_button"
            android:padding="@dimen/padding"
            android:text="@string/title_home"
            android:textColor="@color/colorTextOnPrimary" />
    </LinearLayout>
</LinearLayout>