<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/title_banner"
        app:srcCompat="@drawable/etsy_banner_2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/padding">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/padding">

                <Button
                    android:id="@+id/products"
                    android:layout_width="@dimen/button_width_size"
                    android:layout_height="@dimen/button_height_size"
                    android:background="@drawable/custom_button"
                    android:textColor="@color/colorTextOnPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_products"
                    android:textColor="@color/colorTextOnBackground" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/padding">

                <Button
                    android:id="@+id/about"
                    android:layout_width="@dimen/button_width_size"
                    android:layout_height="@dimen/button_height_size"
                    android:background="@drawable/custom_button"
                    android:textColor="@color/colorTextOnPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_about"
                    android:textColor="@color/colorTextOnBackground" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/padding">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/padding">

                <Button
                    android:id="@+id/join"
                    android:layout_width="@dimen/button_width_size"
                    android:layout_height="@dimen/button_height_size"
                    android:background="@drawable/custom_button"
                    android:textColor="@color/colorTextOnPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_join"
                    android:textColor="@color/colorTextOnBackground" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/padding">

                <Button
                    android:id="@+id/vendors"
                    android:layout_width="@dimen/button_width_size"
                    android:layout_height="@dimen/button_height_size"
                    android:background="@drawable/custom_button"
                    android:textColor="@color/colorTextOnPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_vendors"
                    android:textColor="@color/colorTextOnBackground" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center"
        android:orientation="horizontal"
        android:padding="@dimen/padding">

        <Button
            android:id="@+id/admin"
            android:layout_width="@dimen/small_button_width_size"
            android:layout_height="@dimen/small_button_height_size"
            android:background="@drawable/orange_button_pressed"
            android:padding="@dimen/padding"
            android:text="@string/title_admin"
            android:textColor="@color/colorTextOnPrimary" />
    </LinearLayout>
</LinearLayout>